--- a/PROJETO INTEGRADOR/index.html
+++ b/PROJETO INTEGRADOR/index.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/estilo.css">
+    <link rel="stylesheet" href="./CSS/estilo.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <!--Box Icons Font CDN LINK-->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <!--Font Waesome Font CDN LINK-->
     <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <title>Quarta Página</title>
-</head>
 <body>
     <!--Inicio do Menu-->
     <div class="menu">
@@ -259,9 +258,8 @@
     <a href="#home" class="back-to-top"><i class="icon-crculo"></i></a>
 <!--------------------------------------------Fim do rodapé do site----------------------------------------------->
 
+    <script src="./JS/menu.js"></script>
 
-
-<script src="./JS/menu.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
