--- a/PROJETO INTEGRADOR/livros.html
+++ b/PROJETO INTEGRADOR/livros.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/estilo.css">
+    <link rel="stylesheet" href="./CSS/estilo.css">
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <!--Box Icons Font CDN LINK-->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
@@ -172,10 +172,10 @@
 
 
 <!------------------------------------------------Auto Ajuda----------------------------------------------------->
-    <div id="autoajuda">
+    <div class="container" >
         <div class="row">
           <div class="col-sm">
-            <h1 style="text-align: center">Auto Ajuda</h1>
+            <h1 id="autoajuda" style="text-align: center">Auto Ajuda</h1>
             <p><i>"A autoajuda literária é configurada por um conjunto de obras que tem por objetivo fazer o leitor pensar sobre seus próprios problemas ou aprimorar suas habilidades e, para isso, as narrativas do gênero fornecem variadas alternativas para todo tipo de assunto"</i></p>
             <div class="livro1 mr-0">
                 <div class="imgLivro">
@@ -940,7 +940,6 @@
         </div>
     </footer>
 <!--------------------------------------------Fim do rodapé do site----------------------------------------------->
-
 
     <script src="./JS/menu.js"></script>
 
