--- a/PROJETO INTEGRADOR/perfil.html
+++ b/PROJETO INTEGRADOR/perfil.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/perfil.css">
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    
     <!--Box Icons Font CDN LINK-->
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <!--Font Waesome Font CDN LINK-->
@@ -95,6 +95,7 @@
             <section class="card">
                 <img src="./Img/os_sete_maridos_de_evelyn_hugo.jpg.jpeg" alt="" />
               <div>
+                <h3>Os sete maridos de Evelyn Hugo</h3>
                   <p>
                     Lendária estrela de Hollywood, Evelyn Hugo sempre esteve sob os holofotes ― seja estrelando uma produção vencedora do Oscar, protagonizando algum escândalo ou aparecendo com um novo marido… pela sétima vez. Agora, prestes a completar oitenta anos e reclusa em seu apartamento no Upper East Side, a famigerada atriz decide contar a própria história ― ou sua “verdadeira história” ―, mas com uma condição: que Monique Grant, jornalista iniciante e até então desconhecida, seja a entrevistadora. Ao embarcar nessa misteriosa empreitada, a jovem repórter começa a se dar conta de que nada é por acaso ― e que suas trajetórias podem estar profunda e irreversivelmente conectadas.
                   </p>
@@ -104,6 +105,7 @@
            <section class="card" data-aos="fade-left">
             <img src="./Img/A ultima festa.jpg" alt="" />
             <div>
+                <h3>A Última Festa</h3>
                 <p>
                     Programado para acontecer em um cenário idílico, o réveillon que Miranda, Katie e os outros amigos que conheceram na faculdade passarão juntos este ano promete refeições deliciosas regadas a champanhe, música, jogos e conversas descontraídas. No entanto, as tensões começam já na viagem de trem – o grupo não tem mais nada em comum além de um passado de convivência, feridas jamais cicatrizadas e segredos potencialmente destrutivos. E então, em meio à grande festa da última noite do ano, o fio que os mantém unidos enfim arrebenta. No dia seguinte, alguém está morto e uma forte nevasca impede a vinda do resgate. Ninguém pode entrar. Ninguém pode sair. Nem o assassino.
                 </p>
@@ -113,6 +115,7 @@
              <section class="card" data-aos="fade-right">
                 <img src="./Img/A paciencia silenciosa.jpg" alt="" />
                 <div>
+                    <h3>A Paciente Silenciosa</h3>
                     <p>
                         A paciente silenciosa é um daqueles livros que não saem da cabeça do leitor, quer ele queira, quer não. Alicia Berenson tinha uma vida perfeita. Ela era uma pintora famosa casada com um fotógrafo bem-sucedido e morava numa área nobre de Londres que dá para o parque de Hampstead Heath. Certa noite, Gabriel, seu marido, voltou tarde para casa depois de um ensaio para uma revista muito famosa, e de repente a vida de Alicia mudou completamente...Alicia tinha 33 anos quando se encontrou numa situação que a fez decidir nunca mais dizer nenhuma palavra.
                     </p>
@@ -145,8 +148,9 @@
             </div>
         </section>-->
 
-
+        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="./JS/menu.js"></script>
+        
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
