--- a/PROJETO INTEGRADOR/sobrenos.html
+++ b/PROJETO INTEGRADOR/sobrenos.html
@@ -124,7 +124,7 @@
     </div>
     <div  class="resp2">
         <img src="Img/Mikaella.jpeg" width="200px">
-        <p>Mikaella Santos</p>
+        <p>Mickaella Santos</p>
     </div>
     <div class="resp3">
         <img src="Img/Thays.jpeg" style="width: 200px; height: 200px">
