--- a/PROJETO INTEGRADOR/livros.html
+++ b/PROJETO INTEGRADOR/livros.html
@@ -506,7 +506,7 @@
         </div>
       </div>
     
-<!------------------------------------------------Infanto Juvenil----------------------------------------------------->     
+<!----------------------------------------Infanto Juvenil----------------------------------------------------->     
 
 
         <div class="container">
@@ -872,8 +872,8 @@
                 
                 <!-- <button ><a href="PDF/Crepúsculo/Sol-da-Meia-Noite-_1_.pdf" download="PDF/Crepúsculo/Sol-da-Meia-Noite-_1_.pdf">Download PDF</a></button><br><br>  -->
 
-                <button><a href="https://www.instagram.com/p/CWtR2P0oIPd/?utm_source=ig_web_copy_link">Sinopse</a></button>
-                <a href="./PDF/Crepúsculo/Sol-da-Meia-Noite-_1_.pdf" download="./PDF/Crepúsculo/Sol-da-Meia-Noite-_1_.pdf">COM ZIP</a>
+                <button><a href="https://www.instagram.com/p/CWtR2P0oIPd/?utm_source=ig_web_copy_link">Sinopse</a></button><br><br>
+                <button><a href="./PDF/Crepúsculo/Sol-da-Meia-Noite-_1_.pdf" download="./PDF/Crepúsculo/Sol-da-Meia-Noite-_1_.pdf">Download PDF</a></button><br><br>
                 <button><a href="Epub/Crepúsculo/Sol da Meia-Noite (1).epub" download>Download Epub</a></button>
             </div>
             <div class="diversosImg col-md-6">
