--- a/PROJETO INTEGRADOR/perfil.html
+++ b/PROJETO INTEGRADOR/perfil.html
@@ -81,13 +81,16 @@
 
         <h1 class="perfil">Perfil do Usuário</h1>
 
+         <main>
+       
         <section class="flexbox">
                 <div>
-                    <img src="./Img/perfil.jpg"  width="250px" height="250px">
-                    <p>Graziela Monteiro</p>
-                    <p>monteirograziela385@gmail.com</p>
+                   <img  class="banner"src="./Img/“Quando tiver que escolher entre estar certo e ser gentil, escolha ser gentil”.png"  width="1315px" height="515px">
+                    <p class="nome">Graziela Monteiro</p>
+                    <!--<p>monteirograziela385@gmail.com</p>-->
                 </div>
             </section>
+        </main>
             <br> <br>
 
             <!--Livros que Baixou-->
